GNOME Bugzilla – Bug 655985
a11y-settings: gnome-shell OSK doesn't need a11y
Last modified: 2012-11-09 15:07:19 UTC
.
Created attachment 193267 [details] [review] a11y-settings: gnome-shell OSK doesn't need a11y So don't try and load the modules
But caribou itself needs it, in fallback. This is going to get interesting.
This would only be needed if we dropped fallback mode, and thus the old style Caribou.
Created attachment 228558 [details] [review] a11y-settings: gnome-shell OSK doesn't need a11y So don't try and load the modules. Only Caribou in fallback mode would have needed it. #fallback
Attachment 228558 [details] pushed as c52025f - a11y-settings: gnome-shell OSK doesn't need a11y