a11y-settings: gnome-shell OSK doesn't need a11y

So don't try and load the modules. Only Caribou in
fallback mode would have needed it. #fallback

https://bugzilla.gnome.org/show_bug.cgi?id=655985